[package]
name = "rpizero_rdc_rust"
description = "Raspberry Pi Zero W remote device controller"
authors = ["Andrei Dodu"]
version = "0.1.0"
edition = "2021"

[dependencies]
tide = "0.16.0"
async-std = { version = "1.12.0", features = ["attributes"] }
serde = { version = "1.0.192", features = ["derive"] }
femme = "2.2.1"
rust_gpiozero = "0.2.1"
